--- a/PmQL/Views/Home/PmEvn.cshtml
+++ b/PmQL/Views/Home/PmEvn.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<PmQL.Models.FmpEvn>
+﻿@model IEnumerable<PmQL.Models.PmEvn>
 
 @{
-    ViewData["Title"] = "FMP_EVN Data";
+    ViewData["Title"] = "Pm_EVN Data";
 }
 
-<h1>Dữ liệu FMP_EVN</h1>
+<h1>Dữ liệu Pm_EVN</h1>
 
 <table class="table table-bordered table-striped">
     <thead>
@@ -126,7 +126,6 @@
     .table {
         font-size: 14px;
     }
-
     th, td {
         text-align: center;
     }
