--- a/PmQL/Views/Home/PmSai.cshtml
+++ b/PmQL/Views/Home/PmSai.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<PmQL.Models.FmpEvn>
+﻿@model IEnumerable<PmQL.Models.PmSai>
 
 @{
-    ViewData["Title"] = "FMP_EVN Data";
+    ViewData["Title"] = "Pm_Sai Data";
 }
 
-<h1>Dữ liệu FMP_EVN</h1>
+<h1>Dữ liệu Pm_Sai</h1>
 
 <table class="table table-bordered table-striped">
     <thead>
